fix popup overflow on mobile

--- a/application/src/main/webapp/css/chatMobile.less
+++ b/application/src/main/webapp/css/chatMobile.less
@@ -415,7 +415,10 @@
       margin: 0;
     }
     .popupContent {
+      max-height: calc(100vh - 50px);
+      box-sizing: border-box;
       padding: 10px;
+      overflow-x: hidden;
     }
   }
 
